--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello!</h1>
+<p>For Inquiries, Head on to Discord and DM me at Joseph (Not a Laptop Abuser)#4115</p>
 </body>
 </html>
