--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello!</h1>
 <p>For Inquiries, Head on to Discord and DM me at Joseph (Not a Laptop Abuser)#4115</p>
+<p>Head on over to Facebook for more info about me. https://www.facebook.com/otep.bien.1
 </body>
 </html>
