--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello!</h1>
 <p>For Inquiries, Head on to Discord and DM me at Joseph (Not a Laptop Abuser)#4115</p>
-<p>Head on over to Facebook for more info about me. https://www.facebook.com/otep.bien.1
+  <p>Here are my Socials </p>
+  <a href="https://facebook.com/otep.bien.1">Facebook </a>
 </body>
 </html>
