--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello!</h1>
-<p>For Inquiries, Head on to Discord and DM me at Joseph (Not a Laptop Abuser)#4115</p>
-  <p>Here are my Socials </p>
+<h1>𝗔𝗯𝗼𝘂𝘁 𝗠𝗲</h1>
+<p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
+  <p>Here are my Socials</p>
   <a href="https://facebook.com/otep.bien.1">Facebook </a>
 </body>
 </html>
