--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 <p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
   <p>Here are my Socials</p>
   <a href="https://facebook.com/otep.bien.1">Facebook </a>
+  <p> </p>
+  <a href="https://twitter.com/sda1_hdd">Twitter </a>
+  <p> </p>
+  <a href="discord.com/users/784604406393864192">Discord </a>
+  <p> </p>
+  <a href="https://www.youtube.com/@thelaptopabuser">Youtube </a>
 </body>
 </html>
