--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p> </p>
   <a href="https://twitter.com/sda1_hdd">Twitter </a>
   <p> </p>
-  <a href="discord.com/users/784604406393864192">Discord </a>
+  <a href="https://discord.com/users/784604406393864192">Discord </a>
   <p> </p>
   <a href="https://www.youtube.com/@thelaptopabuser">Youtube </a>
 </body>
