--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <a href="https://discord.com/users/736510056945811536">Discord </a>
   <p> </p>
   <a href="https://www.youtube.com/@thelaptopabuser">Youtube </a>
+  <footer class="footer">
+<p class="footerP">© Joseph Bien 2022 ©</p>
+</footer
 </body>
 </html>
