add  icon to webpage

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <h1>𝗔𝗯𝗼𝘂𝘁 𝗠𝗲</h1>
+<link rel="icon" type="image/x-icon" href="/docs/assets/images/istockphoto-478049213-612x612.jpg">
 <p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
   <p>Here are my Socials</p>
   <a href="https://facebook.com/otep.bien.1">Facebook </a>
