--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+   <title>Website Name</title>
+    <meta content="About Me" property="og:title" />
+    <meta content="Site to introduce myself" property="og:description" />
+    <meta content="https://embed.com/https://thelaptopabuser.me" property="og:url" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
 <body>
 <h1>𝗔𝗯𝗼𝘂𝘁 𝗠𝗲</h1>
