--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-   <title>Website Name</title>
+   <title>About Me</title>
     <meta content="About Me" property="og:title" />
-    <meta content="Site to introduce myself" property="og:description" />
-    <meta content="https://embed.com/https://thelaptopabuser.me" property="og:url" />
+    <meta content="Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles." property="og:description" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
 <body>
