--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <body>
 #site-itself
-<h1>𝗔𝗯𝗼𝘂𝘁 𝗠𝗲</h1>
+   <h1> <img src=/docs/assets/images/AboutMe20.gif> </h1>
 <link rel="icon" type="image/x-icon" href="/docs/assets/images/istockphoto-478049213-612x612.jpg">
 <p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
   <p>Here are my Socials</p>
