--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
 <body>
-   <h1> <img src=/docs/assets/images/AboutMe20.gif> </h1>
+   <h1> <style="text-align:center;"><img src="/docs/assets/images/About20Me.gif" alt="About Me"> </h1>
 <link rel="icon" type="image/x-icon" href="/docs/assets/images/istockphoto-478049213-612x612.jpg">
 <p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
   <p>Here are my Socials</p>
