--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
    <title>About Me</title>
     <meta content="About Me" property="og:title" />
-    <meta content="Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles." property="og:description" />
+    <meta content="My name is Joseph Bien. People call me Joe or Otep. I'm a beginner web developer from the Philippines. My passions are Riding Motorcycles, Gaming, and Tinkering with Electronics." property="og:description" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <html>
 <body>
    <h1> <center><img src="/docs/assets/images/About_20Me.gif" alt="About Me" height="100" width="200"></center> </h1>
 <link rel="icon" type="image/x-icon" href="/docs/assets/images/istockphoto-478049213-612x612.jpg">
-<p>Hey, I’m Joseph but people here call me Otep. I grew up in the Phillipines, and still lives here. I speak Tagalog, Bicol and English. I love Gaming and Motorcycles.</p>
-  <p>Here are my Socials</p>
+<p>My name is Joseph Bien. People call me Joe or Otep. I'm a beginner web developer from the Philippines. My passions are Riding Motorcycles, Gaming, and Tinkering with Electronics</p>
+   <p> </p>
+   <h2> <center> <img src-"/docs/assets/images/follow social.gif" alt="Follow Me on Social Media" height="100" width="200"> </center> </h2>
   <a href="https://facebook.com/otep.bien.1">Facebook </a>
   <p> </p>
   <a href="https://twitter.com/sda1_hdd">Twitter </a>
