--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="icon" type="image/x-icon" href="/docs/assets/images/istockphoto-478049213-612x612.jpg">
 <p>My name is Joseph Bien. People call me Joe or Otep. I'm a beginner web developer from the Philippines. My passions are Riding Motorcycles, Gaming, and Tinkering with Electronics</p>
    <p> </p>
-   <h2> <center> <img src-"/docs/assets/images/follow social.gif" alt="Follow Me on Social Media" height="100" width="200"> </center> </h2>
+   <h2> <center> <img src-"/docs/assets/images/socials.gif" alt="Follow Me on Social Media" height="100" width="200"> </center> </h2>
   <a href="https://facebook.com/otep.bien.1">Facebook </a>
   <p> </p>
   <a href="https://twitter.com/sda1_hdd">Twitter </a>
