--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>My name is Joseph Bien. People call me Joe or Otep. I'm a beginner web developer from the Philippines. My passions are Riding Motorcycles, Gaming, and Tinkering with Electronics</p>
    <p> </p>
    <h2> <center> <img src="/docs/assets/images/socials.gif" alt="Follow Me on Social Media" height="42" width="673"> </center> </h2>
-  <a target="_blank" href="https://facebook.com/otep.bien.1"><img src="/docs/assets/images/facebook logo.png" alt="Facebook Logo" height="100" width="100"> /> </a> 
+  <a <center> target="_blank" href="https://facebook.com/otep.bien.1"><img src="/docs/assets/images/facebook logo.png" alt="Facebook Logo" height="150" width="150"> </center> </a> 
   <p> </p>
   <a href="https://twitter.com/sda1_hdd">Twitter </a>
   <p> </p>
